# Kingdom_Of_Colors

./: .gitignore  Exercise01.sln  Kingdom_Of_Colours.sln  README.md
AR_T1/: AR_T1.vcxproj  CMakeLists.txt  Exercise-1.cpp  Exercise-2.cpp  Exercise-5.cpp  MarkerTracker.cpp  Template_S3_Sobel.cpp  Template_S4_Cramer.cpp
AR_T1/x64/Debug/: Exercise01.exe.recipe  Exercise01.ilk  vc143.idb
AR_T1/x64/Debug/AR_T1.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog
AR_T1/x64/Debug/Exercise01.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Examples/: main.tex  marker_matching.py
GameLogic_Tests/: GameLogic_Tests.cpp  GameLogic_Tests.vcxproj  GameLogic_Tests.vcxproj.filters
Marker_Tracker/: CMakeLists.txt  DrawUtilities.cpp  DrawUtilities.h  Exercise08_New.cpp  FontUtilities.cpp  FontUtilities.h  GameLogic.cpp  GameLogic.h  GameLogic_Utilities.cpp  GameLogic_Utilities.h  MarkerDetectionUtilities.cpp  MarkerDetectionUtilities.h  MarkerTracker.cpp  MarkerTracker.cpp~  Marker_Tracker.vcxproj  Missions.cpp  Missions.h  Structs.h  Testing.cpp  Testing.h  ogl_Routines.h  ogl_UI.cpp  ogl_UI.h
Marker_Tracker/shaders/: fs.glsl  fs_drawing.glsl  fs_projection.glsl  vs.glsl  vs_drawing.glsl  vs_projection.glsl
Marker_Tracker/x64/Debug/: AR_T1.exe.recipe  Exercise01.exe.recipe  (+2 more)
OpenGLTutoials/: AR_T1.vcxproj.filters  DrawPrimitives.h  Exercise_06_Template.cpp  OpenGLSnowMan.cpp  OpenGLTutoials.vcxproj  OpenGLTutoials.vcxproj.filters  OpenGL_Tutorials.vcxproj  Template_S7_Snowman.cpp
(+19 files in other folders)
